vscode-002 | fixed social links at the top and bottom of page, got rid of the FAQ, updated about us, updated gallery

--- a/index.html
+++ b/index.html
@@ -64,16 +64,18 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- Gmap CSS -->
+    <link rel="stylesheet" href="css/gmap.css">
 
     <title>Belfast Ultimate Frisbee</title>
 </head>
 
 <body>
 
-    <div id="fh5co-hero-carousel" class="carousel slide header" data-ride="carousel">
+  <div id="fh5co-hero-carousel" class="carousel slide header" data-ride="carousel">
         <nav class="navbar fixed-top navbar-expand-xl">
             <div class="container">
-                <a class="navbar-brand mobile-logo" href="#"><img src="images/testimages/BUlogo.jpg" alt="" width="100" height="100"/></a>
+                <a class="navbar-brand mobile-logo" href="#"><img src="images/BUlogo2.png" alt="" width="100" height="100"/></a>
                 <button class="navbar-toggler" data-target="#my-nav" onclick="myFunction(this)" data-toggle="collapse">
                     <span class="bar1"></span> <span class="bar2"></span> <span class="bar3"></span> </button>
 
@@ -84,17 +86,19 @@
                         <ul class="navbar-nav float-left social-links">
                             <li class="nav-item">
                                 <a class="nav-link" href="https://www.facebook.com/BelfastUltimate"><i class="fab fa-facebook-f"></i></a>
-								<a class="nav-link" href="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1"><i class=".fa-external-link-square-alt"></i></a>
                             </li>
-							<li class="nav-item">
-								<a class="nav-link" href="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1"><i class=".fa-external-link-square-alt"></i></a>
+							              <li class="nav-item">
+								                <a class="nav-link" href="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1"><i class="fas fa-music"></i></a>
+                            </li>
+                            <li class="nav-item">
+								                <a class="nav-link" href="https://www.instagram.com/belfastultimate/"><i class="fa fa-camera-retro"></i></a>
                             </li>
                         </ul>
                     </div>
 
                     <ul class="navbar-nav mx-auto logo-desktop">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#"><img src="images/testimages/BUlogo.jpg" alt="" width="100" height="100"/></a>
+                            <a class="nav-link" href="#"><img src="images/BUlogo2.png" alt="" width="100" height="100"/></a>
                         </li>
                     </ul>
 
@@ -105,63 +109,57 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#about-us">About Us</a>
                         </li>
+                        <!---<li class="nav-item">
+                            <a class="nav-link" href="#faq">FAQ</a>
+                        </li>-->
                         <li class="nav-item">
-                            <a class="nav-link" href="#some-images">Some Images</a>
+                            <a class="nav-link" href="#gallery">Gallery</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact Us</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#news">News</a>
-                        </li>
-
                     </ul>
                 </div>
             </div>
         </nav>
 
         <div class="carousel-inner">
+
             <div class="carousel-item active">
-
-                <img class="d-block w-100 home-bg" alt="home-bg" src="images/testimages/BU6.jpg">
-
+                <img class="d-block w-100 home-bg" alt="home-bg" src="images/websiteheader/header1.jpg">
                 <div class="carousel-caption d-md-block">
-                    <p class="frst-hrd">1</p>
+                    <p class="frst-hrd"></p>
                     <h5>BELFAST ULTIMATE FRISBEE</h5>
                     <p>JOIN US</p>
-
                 </div>
-
-
             </div>
+
             <div class="carousel-item">
-                <img class="d-block w-100 home-bg" alt="home-bg" src="images/testimages/BU8.jpg">
-
+                <img class="d-block w-100 home-bg" alt="home-bg" src="images/websiteheader/header2.jpg">
                 <div class="carousel-caption d-md-block">
-                    <p class="frst-hrd">2</p>
+                    <p class="frst-hrd"></p>
                     <h5>BELFAST ULTIMATE FRISBEE</h5>
                     <p>JOIN US</p>
-
                 </div>
             </div>
+
             <div class="carousel-item">
-                <img class="d-block w-100 home-bg" alt="home-bg" src="images/testimages/BU5.jpg">
-
+                <img class="d-block w-100 home-bg" alt="home-bg" src="images/websiteheader/header3.jpg">
                 <div class="carousel-caption d-md-block">
-                    <p class="frst-hrd">3</p>
+                    <p class="frst-hrd"></p>
                     <h5>BELFAST ULTIMATE FRISBEE</h5>
                     <p>JOIN US</p>
-
                 </div>
             </div>
+
             <div class="scroll-button">
                 <p>Scroll down to see more...</p>
                 <a href="#about-us" class="page-scroll">
-                    <img src="images/arrows-down.png" alt="arrow down" />
+                    <img src="images/icons/arrows-down.png" alt="arrow down" />
                 </a>
-
             </div>
         </div>
+
         <ul class="carousel-indicators">
             <li class="active" data-target="#fh5co-hero-carousel" data-slide-to="0" aria-current="location"></li>
             <li data-target="#fh5co-hero-carousel" data-slide-to="1"></li>
@@ -169,7 +167,9 @@
         </ul>
     </div>
 
-    <div class="container-fluid fh5co-about-us" id="about-us">
+
+ 
+  <div class="container-fluid fh5co-about-us" id="about-us">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
@@ -190,128 +190,149 @@
 
                     <div class="owl-carousel owl-carousel1 owl-theme">
                         <div>
-                            <img src="images/testimages/BU3.jpg" alt="" class="img-fluid" />
+                            <img src="images/groupselfies/selfie1.jpg" alt="" class="img-fluid" />
                         </div>
                         <div>
-                            <img src="images/testimages/BU3.jpg" alt="" class="img-fluid" />
+                            <img src="images/groupselfies/selfie2.jpg" alt="" class="img-fluid" />
                         </div>
                         <div>
-                            <img src="images/testimages/BU3.jpg" alt="" class="img-fluid" />
+                            <img src="images/groupselfies/selfie4.jpg" alt="" class="img-fluid" />
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-8">
                     <div class="about-us-content">
                         <h2>ABOUT US</h2>
-                        <p>We're an amateur Ultimate Frisbee team in Belfast. We currently play at the top of Ormeau park beside the inside tennis courts. Join us on Mondays 6.30pm!</p>
+                        <p>We're an Ultimate Frisbee team based in Belfast.</p>
+                        <p>We currently play at the top of Ormeau park beside the inside tennis courts. </p>   
+                        <p>Join us on Mondays at 6.30pm!</p>    
+                        <p>All you need is a bottle of water and some runners (cleats if you have them) and we'll provide the rest!</p>   
+                        <p>Beginners and experienced welcome!</p>   
                     </div>
-
-
                 </div>
             </div>
         </div>
+  </div>
+
+
+
+
+<!-- FAQ
+  <div class="container-fluid fh5co-faq" id="faq">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+                    <h2>FAQ</h2>
+                    <div class="faq-content"></div>
+                    <h4>Where/when do you train?</h4>
+                    <blockquote>Currently we train at the top of Ormeau park at 6.30pm Monday evenings.</blockquote>
+                      <div class="google-map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d493.7081117265608!2d-5.915526895036672!3d54.59030133827024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2suk!4v1757720869731!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                      </div>
+        </div>
+      </div>
     </div>
+  </div>
+-->
 
-	<div class="container-fluid fh5co-some-images" id="some-images">
-		<h2>Some Images!</h2>
-	    <p>Testing</p>
+
+
+
+	<div class="container-fluid fh5co-gallery" id="gallery">
+		<h2>Gallery</h2>
+    <h3>Training</h3>
 		<div class="responsive">
 		  <div class="gallery">
-		    <a target="_blank" href="images/testimages/BU1.jpg">
-		      <img src="images/testimages/BU1.jpg" alt="">
+		    <a target="_blank" href="images/gallery/BU1.jpg">
+		      <img src="images/gallery/BU1.jpg" alt="">
 		    </a>
-		    <div class="desc">Add a description of the image here</div>
+		    <div class="desc"></div>
 		  </div>
 		</div>
 		
 		<div class="responsive">
 		  <div class="gallery">
-		    <a target="_blank" href="images/testimages/BU2.jpg">
-		      <img src="images/testimages/BU2.jpg" alt="">
+		    <a target="_blank" href="images/gallery/BU2.jpg">
+		      <img src="images/gallery/BU2.jpg" alt="">
 		    </a>
-		    <div class="desc">Add a description of the image here</div>
+		    <div class="desc"></div>
 		  </div>
 		</div>
 		
 		<div class="responsive">
 		  <div class="gallery">
-		    <a target="_blank" href="images/testimages/BU3.jpg">
-		      <img src="images/testimages/BU3.jpg" alt="">
+		    <a target="_blank" href="images/gallery/BU3.jpg">
+		      <img src="images/gallery/BU3.jpg" alt="">
 		    </a>
-		    <div class="desc">Add a description of the image here</div>
+		    <div class="desc"></div>
 		  </div>
 		</div>
 		
 		<div class="responsive">
 		  <div class="gallery">
-		    <a target="_blank" href="images/testimages/BU4.jpg">
-		      <img src="images/testimages/BU4.jpg" alt="">
+		    <a target="_blank" href="images/gallery/BU4.jpg">
+		      <img src="images/gallery/BU4.jpg" alt="">
 		    </a>
-		    <div class="desc">Add a description of the image here</div>
+		    <div class="desc"></div>
 		  </div>
 		</div>
 
 		<div class="responsive">
 		  <div class="gallery">
-		    <a target="_blank" href="images/testimages/BU5.jpg">
-		      <img src="images/testimages/BU5.jpg" alt="">
+		    <a target="_blank" href="images/gallery/BU5.jpg">
+		      <img src="images/gallery/BU5.jpg" alt="">
 		    </a>
-		    <div class="desc">Add a description of the image here</div>
+		    <div class="desc"></div>
 		  </div>
 		</div>
 
 		<div class="responsive">
 		  <div class="gallery">
-		    <a target="_blank" href="images/testimages/BU6.jpg">
-		      <img src="images/testimages/BU6.jpg" alt="">
+		    <a target="_blank" href="images/gallery/BU6.jpg">
+		      <img src="images/gallery/BU6.jpg" alt="">
 		    </a>
-		    <div class="desc">Add a description of the image here</div>
+		    <div class="desc"></div>
+		  </div>
+		</div>
+    <div class="clearfix"></div>
+    <h3>Socials</h3>
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/socials/socials3.jpg">
+		      <img src="images/socials/socials3.jpg" alt="">
+		    </a>
+		    <div class="desc"></div>
 		  </div>
 		</div>
 
 		<div class="responsive">
 		  <div class="gallery">
-		    <a target="_blank" href="images/testimages/BU7.jpg">
-		      <img src="images/testimages/BU7.jpg" alt="">
+		    <a target="_blank" href="images/socials/socials4.jpg">
+		      <img src="images/socials/socials4.jpg" alt="">
 		    </a>
-		    <div class="desc">Add a description of the image here</div>
+		    <div class="desc"></div>
 		  </div>
 		</div>
 
 		<div class="responsive">
 		  <div class="gallery">
-		    <a target="_blank" href="images/testimages/BU8.jpg">
-		      <img src="images/testimages/BU8.jpg" alt="">
+		    <a target="_blank" href="images/socials/socials5.jpg">
+		      <img src="images/socials/socials5.jpg" alt="">
 		    </a>
-		    <div class="desc">Add a description of the image here</div>
+		    <div class="desc"></div>
 		  </div>
 		</div>
 
-		<div class="responsive">
-		  <div class="gallery">
-		    <a target="_blank" href="images/testimages/BU9.jpg">
-		      <img src="images/testimages/BU9.jpg" alt="">
-		    </a>
-		    <div class="desc">Add a description of the image here</div>
-		  </div>
-		</div>
-
-		<div class="responsive">
-		  <div class="gallery">
-		    <a target="_blank" href="images/testimages/B10.jpg">
-		      <img src="images/testimages/BU10.jpg" alt="">
-		    </a>
-		    <div class="desc">Add a description of the image here</div>
-		  </div>
-		</div>
 	<div class="clearfix"></div>
 	</div>           
 
 
-    <footer class="container-fluid fh5co-footer">
+
+  <footer class="container-fluid fh5co-footer">
         <div class="container" id="contact">
             <div class="row">
                 <div class="col-lg-5">
+                  
                     <h2>CONTACT</h2>
                     <p>
                         <span class="email"><img src="images/icons/email.png"
@@ -323,26 +344,31 @@
                             <a class="nav-link" href="https://www.facebook.com/BelfastUltimate"><i class="fab fa-facebook-f"></i></a>
                         </li>
                         <li class="nav-item">
-							<a class="nav-link" href="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1"><i class=".fa-external-link-square-alt"></i></a>
+							              <a class="nav-link" href="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1"><i class="fas fa-music"></i></a>
+                        </li>
+                        <li class="nav-item">
+								                <a class="nav-link" href="https://www.instagram.com/belfastultimate/"><i class="fa fa-camera-retro"></i></a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
-    </footer>
-    
-    <div class="container-fluid copy">
+  </footer>
+
+
+
+  <div class="container-fluid copy">
         <div class="col-lg-12">
             <p>&copy; 2018 Photogenic. All rights Reserved. Design by <a href="https://freehtml5.co" target="_blank">FreeHTML5.co</a>.</p>
         </div>
-    </div>
+  </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="owl-carousel/owl.carousel.min.js"></script>
-    <script src="js/isotope-docs.min.js?6"></script>
-    <script src="js/main.js"></script>
+
+
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="owl-carousel/owl.carousel.min.js"></script>
+  <script src="js/isotope-docs.min.js?6"></script>
+  <script src="js/main.js"></script>
 </body>
-
-
 </html>
