vscode-002 | added google maps

--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
                             <a class="nav-link" href="#faq">FAQ</a>
                         </li>-->
                         <li class="nav-item">
+                            <a class="nav-link" href="#map">Map</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#gallery">Gallery</a>
                         </li>
                         <li class="nav-item">
@@ -207,14 +210,29 @@
                         <p>We currently play at the top of Ormeau park beside the inside tennis courts. </p>   
                         <p>Join us on Mondays at 6.30pm!</p>    
                         <p>All you need is a bottle of water and some runners (cleats if you have them) and we'll provide the rest!</p>   
-                        <p>Beginners and experienced welcome!</p>   
+                        <p>Beginners and experienced welcome!</p>
                     </div>
                 </div>
             </div>
         </div>
   </div>
-
-
+  
+<div class="container-fluid fh5co-faq" id="faq">
+    <div class="container">
+      <div style="width: 100%">
+        <iframe 
+        width="100%" 
+        height="600" 
+        frameborder="0" 
+        scrolling="no" 
+        marginheight="0" 
+        marginwidth="0" 
+        src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=54.59029249539444%20-5.915322303771973+(Belfast%20Ultimate%20Frisbee)&amp;t=k&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+        <a href="https://www.mapsdirections.info/fr/calculer-la-population-sur-une-carte">Calculateur de carte de population</a>
+        </iframe>
+      </div>
+    </div>
+</div>
 
 
 <!-- FAQ
