--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <a class="nav-link" href="#contact">Contact Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#news">News</a>
+                            <a class="nav-link" href="#map">Map</a>
                         </li>
 
                     </ul>
@@ -205,27 +205,14 @@
                     <div class="about-us-content">
                         <h2>ABOUT US</h2>
                         <p>We're an amateur Ultimate Frisbee team in Belfast. We currently play at the top of Ormeau park beside the inside tennis courts. Join us on Mondays 6.30pm!</p>
-						 <div style="width: 100%">
-						    <iframe 
-						      width="100%" 
-						      height="600" 
-						      frameborder="0" 
-						      scrolling="no" 
-						      marginheight="0" 
-						      marginwidth="0" 
-						      src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=54.59029249539444%20-5.915322303771973+(Belfast%20Ultimate%20Frisbee)&amp;t=k&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
-						      <a href="https://www.mapsdirections.info/fr/calculer-la-population-sur-une-carte">Calculateur de carte de population</a>
-						    </iframe>
-						  </div>
                     </div>
-
-
                 </div>
             </div>
         </div>
+		<div class="clearfix"></div>
     </div>
 
-	<div class="container-fluid fh5co-faq" id="faq">
+	<div class="container-fluid fh5co-map" id="map">
     <div class="container">
       <div style="width: 100%">
         <iframe 
@@ -375,6 +362,7 @@
 
 
 </html>
+
 
 
 
