vscode-002 | formatted gmaps

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </div>
                 <div class="col-lg-8">
                     <div class="about-us-content">
-                        <h2>ABOUT US</h2>
+                        <h2>About us</h2>
                         <p>We're an Ultimate Frisbee team based in Belfast.</p>
                         <p>We currently play at the top of Ormeau park beside the inside tennis courts. </p>   
                         <p>Join us on Mondays at 6.30pm!</p>    
@@ -216,9 +216,11 @@
             </div>
         </div>
   </div>
-  
-<div class="container-fluid fh5co-faq" id="faq">
+
+<div class="container-fluid fh5co-map" id="map">
     <div class="container">
+      <h2>Map</h2>
+      <h3>We train here:</h3>
       <div style="width: 100%">
         <iframe 
         width="100%" 
@@ -351,7 +353,7 @@
             <div class="row">
                 <div class="col-lg-5">
                   
-                    <h2>CONTACT</h2>
+                    <h2>Contacts</h2>
                     <p>
                         <span class="email"><img src="images/icons/email.png"
                                 alt="email icon" /></span><b>chairperson.belfastultimate@gmail.com</b>
