--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
 
 
 	<div class="container-fluid fh5co-gallery" id="gallery">
+    <div class="container">
 		<h2>Gallery</h2>
     <h3>Training</h3>
 		<div class="responsive">
@@ -342,14 +343,14 @@
 		    <div class="desc"></div>
 		  </div>
 		</div>
-
+  </div>
 	<div class="clearfix"></div>
 	</div>           
 
 
 
   <footer class="container-fluid fh5co-footer">
-        <div class="container" id="contact">
+        <div class="container" id="footer">
             <div class="row">
                 <div class="col-lg-5">
                   
